--- a/httpdocs/ad.html
+++ b/httpdocs/ad.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Opendesktop Ad</title>
+    <title>Opendesktop Ad</title>    
 </head>
 <body>
 <center>
-            <div>
+<div style="height: 800px">
+            <div style="padding-bottom:50px;">
             <h2>
             This is the only place to show an ad, so please turn off your ad blocker. thanks!
             <span id="timer"></span>            
             </h2>
-            </div>
+          </div>
             <div>
             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- Responsive New Displayblock -->
@@ -23,6 +24,7 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
             </div>
+</div>
 </center>
 <script type="text/javascript">    
     var myVar = setInterval(myTimer, 1000);
